fix(eks-public) correct lb-controller value
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/clusters/eks-public.yaml
+++ b/clusters/eks-public.yaml
@@ -54,7 +54,9 @@ releases:
     version: 1.4.5
     values:
       - "../config/ext_aws-load-balancer-controller.yaml"
-      - clusterName: public-blessed-bullfrog
+    set:
+      - name: clusterName
+        value: public-blessed-bullfrog
   - name: cert-manager
     namespace: cert-manager
     chart: jetstack/cert-manager
