feat: add `eks-public` cluster with `artifact-caching-proxy` (#2944)
* feat: add eks-public cluster with artifact-caching-proxy

Ref: https://github.com/jenkins-infra/helpdesk/issues/2752

* fix (wip)

* fix: chart version instead of app version

* fix: correct eks-public cluster name

* chore: cleanup 404 manifest

* wip + samples for debug

* missing eol

* wip

* fix

* yamllint --config-file yamllint.config config

* fix(eks-public) correct autoscaler value

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* chore(doks,cik8s) use set for jenkins-agents instead of a full file

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* fix(eks-public) correct lb-controller value

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* fix

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* fix

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* fix

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* fixup

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>
Co-authored-by: Damien Duportal <damien.duportal@gmail.com>

--- a/clusters/doks-public.yaml
+++ b/clusters/doks-public.yaml
@@ -20,10 +20,7 @@ releases:
     chart: jenkins-infra/docker-registry-secrets
     version: 0.1.0
     values:
-      - imageCredentials:
-          enabled: true
-          namespaces:
-            - datadog
+      - "../config/docker-registry-secrets.yaml"
     secrets:
       - "../secrets/config/docker-registry-secrets/secrets.yaml"
   - name: cert-manager
