--- a/clusters/doks.yaml
+++ b/clusters/doks.yaml
@@ -17,6 +17,9 @@ releases:
     version: 0.1.0
     values:
       - "../config/docker-registry-secrets.yaml"
+    set:
+      - name: "imageCredentials.namespaces[1]"
+        value: jenkins-agents
     secrets:
       - "../secrets/config/docker-registry-secrets/secrets.yaml"
   - name: datadog
