--- a/clusters/cik8s.yaml
+++ b/clusters/cik8s.yaml
@@ -21,6 +21,9 @@ releases:
     version: 0.1.0
     values:
       - "../config/docker-registry-secrets.yaml"
+    set:
+      - name: "imageCredentials.namespaces[1]"
+        value: jenkins-agents
     secrets:
       - "../secrets/config/docker-registry-secrets/secrets.yaml"
   - name: datadog
@@ -47,10 +50,10 @@ releases:
     chart: autoscaler/cluster-autoscaler
     version: 9.21.0
     values:
-      - "../config/ext_autoscaler.yaml"
+      - "../config/ext_autoscaler_cik8s.yaml"
   - name: aws-node-termination-handler
     namespace: eks
     chart: eks/aws-node-termination-handler
     version: 0.19.3
     values:
-      - "../config/ext_aws-node-termination-handler.yaml"
+      - "../config/ext_aws-node-termination-handler_cik8s.yaml"
