--- a/updatecli/updatecli.d/docker-images/404.yaml
+++ b/updatecli/updatecli.d/docker-images/404.yaml
@@ -79,7 +79,7 @@ pullrequests:
   default:
     kind: github
     scmid: default
-    title: Bump `404` docker image version to {{ source "latestRelease" }}
+    title: Bump 404 docker image version to {{ source "latestRelease" }}
     spec:
       labels:
         - dependencies
