--- a/config/ext_public-nginx-ingress_eks-public.yaml
+++ b/config/ext_public-nginx-ingress_eks-public.yaml
@@ -1,6 +1,26 @@
 defaultBackend:
-  # disabled as not compatible with arm64/aarch64
-  enabled: false
+  enabled: true
+  image:
+    repository: jenkinsciinfra/404
+    tag: 0.3.58
+    pullPolicy: IfNotPresent
+  ## Unprivileged port as non root user and no escalation allowed
+  port: 8080
+  ## Volumes are required because rootfs is readonly
+  extraVolumeMounts:
+    - name: nginx-cache
+      mountPath: /var/cache/nginx
+    - name: nginx-rundir
+      mountPath: /var/run/nginx
+    - name: nginx-logs
+      mountPath: /var/logs/nginx
+  extraVolumes:
+    - name: nginx-cache
+      emptyDir: {}
+    - name: nginx-rundir
+      emptyDir: {}
+    - name: nginx-logs
+      emptyDir: {}
 controller:
   publishService:
     enabled: true
