feat(infra.ci) add a job for the Docker image of ircbot
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/config/ext_jenkins-infra-jobs.yaml
+++ b/config/ext_jenkins-infra-jobs.yaml
@@ -47,6 +47,8 @@ jobsDefinition:
       docker-plugin-site-issues:
       docker-plugins-self-service:
       docker-rsyncd:
+      ircbot:
+        jenkinsfilePath: Jenkinsfile
       plugin-health-scoring:
         jenkinsfilePath: Jenkinsfile
       rating:
