feat(eks-public) use new cluster name: public-mint-ape
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/clusters/eks-public.yaml
+++ b/clusters/eks-public.yaml
@@ -36,7 +36,7 @@ releases:
       - "../config/ext_autoscaler_eks-public.yaml"
     set:
       - name: autoDiscovery.clusterName
-        value: public-model-hermit
+        value: public-mint-ape
   - name: aws-node-termination-handler
     namespace: eks
     chart: eks/aws-node-termination-handler
@@ -56,7 +56,7 @@ releases:
       - "../config/ext_aws-load-balancer-controller.yaml"
     set:
       - name: clusterName
-        value: public-model-hermit
+        value: public-mint-ape
   - name: cert-manager
     namespace: cert-manager
     chart: jetstack/cert-manager
