fix(eks-public) correct remaining configs
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/config/ext_aws-node-termination-handler_eks-public.yaml
+++ b/config/ext_aws-node-termination-handler_eks-public.yaml
@@ -3,4 +3,4 @@ awsRegion: us-east-2
 
 nodeSelector:
   node.kubernetes.io/lifecycle: normal
-  node.kubernetes.io/instance-type: t4g.xlarge
+  node.kubernetes.io/instance-type: t3a.xlarge
