--- a/updatecli/updatecli.d/docker-images/datadog.yaml
+++ b/updatecli/updatecli.d/docker-images/datadog.yaml
@@ -20,6 +20,8 @@ sources:
       image: "jenkinsciinfra/datadog"
       tag: "latest"
       architecture: amd64
+    transformers:
+      - trimprefix: 'sha256:'
 
 # no condition to test docker image availability as we're using a digest from docker hub
 
