--- a/config/artifact-caching-proxy_aws.yaml
+++ b/config/artifact-caching-proxy_aws.yaml
@@ -10,4 +10,15 @@ ingress:
         - repo.aws.jenkins.io
 
 persistence:
-  storageClass: ebs-gp3
+  storageClass: ebs-sc
+  ## TODO: find a way to helmfile apply this YAML storageclass definition
+  ##########
+  # apiVersion: storage.k8s.io/v1
+  # kind: StorageClass
+  # metadata:
+  #   name: ebs-sc
+  #   annotations:
+  #     storageclass.kubernetes.io/is-default-class: "true" # Don't forget to edit the "gp2" to set this annotation to "false"
+  # provisioner: ebs.csi.aws.com
+  # volumeBindingMode: WaitForFirstConsumer
+  ##########
