--- a/config/ext_public-nginx-ingress_eks-public.yaml
+++ b/config/ext_public-nginx-ingress_eks-public.yaml
@@ -2,7 +2,9 @@ controller:
   service:
     annotations:
       # NLB is balancing at Layer 4 (no need for an ALB-layer 7)
-      service.beta.kubernetes.io/aws-load-balancer-type: nlb
+      # Using `nlb-ip` instead of `nlb` ensures the AWS LoadBalancer Controller is used to provision (instead of the Legacy Cloud Controller)
+      #   as per https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.4/guide/service/annotations/#legacy-cloud-provider
+      service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
       service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
       # Using "ip" instead of instance ensures that balancing is NOT handled
       # by the cluster iptables, but by the external LB itself through CNI
