--- a/clusters/prodpublick8s.yaml
+++ b/clusters/prodpublick8s.yaml
@@ -274,3 +274,11 @@ releases:
       - "../config/plugin-health-scoring.yaml"
     secrets:
       - "../secrets/config/plugin-health-scoring/secrets.yaml"
+  - name: rss2twitter
+    namespace: rss2twitter
+    chart: jenkins-infra/rss2twitter
+    version: 0.0.2
+    values:
+      - "../config/rss2twitter.yaml"
+    secrets:
+      - "../secrets/config/rss2twitter/secrets.yaml"
