feat: deploy `rss2twitter` service on `prodpublick8s`
Configured in dry mode for now.

--- a/clusters/prodpublick8s.yaml
+++ b/clusters/prodpublick8s.yaml
@@ -281,4 +281,4 @@ releases:
     values:
       - "../config/rss2twitter.yaml"
     secrets:
-      - "../secrets/config/rss2twitter/secrets.yaml"
+      - "../secrets/config/rss2twitter/secrets.yaml" # @jenkins_release Twitter dev account credentials
