feat: activate `rss2twitter` service by disabling dry mode

--- a/config/rss2twitter.yaml
+++ b/config/rss2twitter.yaml
@@ -5,4 +5,4 @@ env:
     {{.Title}}
     {{.Link}}?utm_source=rss2twitter&utm_medium=twitter"
   # disables publishing to twitter and sends updates to logger only
-  dryMode: true
+  dryMode: false
