fixup 1a97edf (typo)
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/clusters/prodpublick8s.yaml
+++ b/clusters/prodpublick8s.yaml
@@ -168,7 +168,7 @@ releases:
     values:
       - "../config/mirrorbits.yaml"
     secrets:
-      - "../secrets/config/mirrorbits/secrets.yaml
+      - "../secrets/config/mirrorbits/secrets.yaml"
   - name: incrementals-publisher
     namespace: incrementals-publisher
     chart: jenkins-infra/incrementals-publisher
