chore: update .sops.yaml keys

--- a/.sops.yaml
+++ b/.sops.yaml
@@ -13,7 +13,7 @@ creation_rules:
             - '56D8342434B84E2D1CCF53D96E9A025D52210D3D' # Olblak
             - '6699E555C6730CAED9083B7AD40F4AD2F55AF15F' # timja
             - '29B84443F41DE582F71599AFB47082DEE225AE06' # dduportal
-            - '81B0C54A1BA2C92EAD985025A2B9560AF24FF1AD' # hlemeur
+            - '516FC2C38E13860FA699B2CE2CA796B06D75307B' # hlemeur
             - 'E104B7543ECCCC68EA1EB35DD9B2DBFB59AD8344' # markewaite
             - '6CD774F428CA355770C67851496D2EDEDEFA7D47' # smerle
 
@@ -28,7 +28,7 @@ creation_rules:
             - '6699E555C6730CAED9083B7AD40F4AD2F55AF15F' # timja
             - '56D8342434B84E2D1CCF53D96E9A025D52210D3D' # Olblak
             - '29B84443F41DE582F71599AFB47082DEE225AE06' # dduportal
-            - '81B0C54A1BA2C92EAD985025A2B9560AF24FF1AD' # hlemeur
+            - '516FC2C38E13860FA699B2CE2CA796B06D75307B' # hlemeur
             - 'E104B7543ECCCC68EA1EB35DD9B2DBFB59AD8344' # markewaite
             - '6CD774F428CA355770C67851496D2EDEDEFA7D47' # smerle
 
@@ -43,9 +43,8 @@ creation_rules:
             - '6699E555C6730CAED9083B7AD40F4AD2F55AF15F' # timja
             - '56D8342434B84E2D1CCF53D96E9A025D52210D3D' # Olblak
             - '29B84443F41DE582F71599AFB47082DEE225AE06' # dduportal
-            - '81B0C54A1BA2C92EAD985025A2B9560AF24FF1AD' # hlemeur
+            - '516FC2C38E13860FA699B2CE2CA796B06D75307B' # hlemeur
             - 'E104B7543ECCCC68EA1EB35DD9B2DBFB59AD8344' # markewaite
-            - '56D8342434B84E2D1CCF53D96E9A025D52210D3D' # Olblak
             - '6CD774F428CA355770C67851496D2EDEDEFA7D47' # smerle
 
     ## Default fallback (for all files not matched by previous rules)
@@ -55,9 +54,10 @@ creation_rules:
             key: 'sops'
             version: '252fc7e646ac40f184ab4a6016484725'
           pgp:
-            - '56D8342434B84E2D1CCF53D96E9A025D52210D3D' # Olblak
+            - '88FABF5F307FB5870B6AD2E8A266F2D3F9D60C45' # Halkeye
             - '6699E555C6730CAED9083B7AD40F4AD2F55AF15F' # timja
+            - '56D8342434B84E2D1CCF53D96E9A025D52210D3D' # Olblak
             - '29B84443F41DE582F71599AFB47082DEE225AE06' # dduportal
+            - '516FC2C38E13860FA699B2CE2CA796B06D75307B' # hlemeur
             - 'E104B7543ECCCC68EA1EB35DD9B2DBFB59AD8344' # markewaite
-            - '81B0C54A1BA2C92EAD985025A2B9560AF24FF1AD' # hlemeur
             - '6CD774F428CA355770C67851496D2EDEDEFA7D47' # smerle
