--- a/config/ext_datadog_temp-privatek8s.yaml
+++ b/config/ext_datadog_temp-privatek8s.yaml
@@ -6,3 +6,4 @@ datadog:
         fieldRef:
           fieldPath: spec.nodeName
     hostCAPath: /etc/kubernetes/certs/kubeletserver.crt
+    tlsVerify: false # Required as of Agent 7.35 because Kubelet certificates in AKS do not have a Subject Alternative Name (SAN) set.
