chore(accountapp) YAML formatting
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/config/accountapp.yaml
+++ b/config/accountapp.yaml
@@ -4,9 +4,9 @@ ingress:
   enabled: true
   className: public-nginx
   annotations:
-    "cert-manager.io/cluster-issuer": "letsencrypt-prod"
-    "nginx.ingress.kubernetes.io/ssl-redirect": "true"
-    "nginx.ingress.kubernetes.io/affinity": "cookie"
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/affinity: "cookie"
   hosts:
     - host: accounts.jenkins.io
       paths:
