--- a/config/accountapp.yaml
+++ b/config/accountapp.yaml
@@ -4,9 +4,12 @@ ingress:
   enabled: true
   className: public-nginx
   annotations:
-    "cert-manager.io/cluster-issuer": "letsencrypt-prod"
-    "nginx.ingress.kubernetes.io/ssl-redirect": "true"
-    "nginx.ingress.kubernetes.io/affinity": "cookie"
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/affinity: "cookie"
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      more_set_headers "X-Frame-Options: DENY";
+      more_set_headers "X-Content-Type-Options: nosniff";
   hosts:
     - host: accounts.jenkins.io
       paths:
