--- a/updatecli/updatecli.d/charts/acme.yaml
+++ b/updatecli/updatecli.d/charts/acme.yaml
@@ -28,6 +28,7 @@ targets:
       files:
         - clusters/doks-public.yaml
         - clusters/eks-public.yaml
+        - clusters/privatek8s.yaml
         - clusters/prodpublick8s.yaml
         - clusters/temp-privatek8s.yaml
       matchpattern: 'chart: jenkins-infra\/acme((\r\n|\r|\n)(\s+))version: .*'
