--- a/updatecli/updatecli.d/charts/datadog.yaml
+++ b/updatecli/updatecli.d/charts/datadog.yaml
@@ -31,6 +31,7 @@ targets:
         - clusters/doks.yaml
         - clusters/doks-public.yaml
         - clusters/eks-public.yaml
+        - clusters/privatek8s.yaml
         - clusters/prodpublick8s.yaml
         - clusters/temp-privatek8s.yaml
       matchpattern: 'chart: datadog\/datadog((\r\n|\r|\n)(\s+))version: .*'
