--- a/updatecli/updatecli.d/charts/jenkins-jobs.yaml
+++ b/updatecli/updatecli.d/charts/jenkins-jobs.yaml
@@ -25,6 +25,7 @@ targets:
     name: "Update the chart version for jenkins-jobs"
     kind: file
     spec:
+      file: clusters/privatek8s.yaml
       file: clusters/temp-privatek8s.yaml
       matchpattern: 'chart: jenkins-infra\/jenkins-jobs((\r\n|\r|\n)(\s+))version: .*'
       replacepattern: 'chart: jenkins-infra/jenkins-jobs${1}version: {{ source "lastChartVersion" }}'
