feat(doks): set a maximum of 30 pods for jenkins-agents namespace

--- a/clusters/doks.yaml
+++ b/clusters/doks.yaml
@@ -41,3 +41,6 @@ releases:
     version: 0.3.0
     secrets:
       - "../secrets/config/jenkins-kubernetes-agents/secrets.yaml"
+    set:
+      - name: "quotas.pods"
+        value: "30"
