feat(cik8s): set a maximum of 120 pods for jenkins-agents namespace

--- a/clusters/cik8s.yaml
+++ b/clusters/cik8s.yaml
@@ -45,6 +45,9 @@ releases:
     version: 0.3.0
     secrets:
       - "../secrets/config/jenkins-kubernetes-agents/secrets.yaml"
+    set:
+      - name: "quotas.pods"
+        value: "120"
   - name: autoscaler
     namespace: autoscaler
     chart: autoscaler/cluster-autoscaler
