--- a/config/ext_jenkins-infra-jobs.yaml
+++ b/config/ext_jenkins-infra-jobs.yaml
@@ -125,6 +125,10 @@ jobsDefinition:
             fileName: "kubeconfig"
             description: "Kubeconfig file for doks-public"
             secretBytes: "${base64:${KUBECONFIG_DOKS_PUBLIC}}"
+          kubeconfig-privatek8s:
+            fileName: "kubeconfig"
+            description: "Kubeconfig file for privatek8s"
+            secretBytes: "${base64:${KUBECONFIG_PRIVATEK8S}}"
           kubeconfig-prodpublick8s:
             fileName: "kubeconfig"
             description: "Kubeconfig file for prodpublick8s"
