trying to split jenkins-infra values by cluster

--- a/config/ext_jenkins-infra_privatek8s.yaml
+++ b/config/ext_jenkins-infra_privatek8s.yaml
@@ -1,9 +1,7 @@
 controller:
   JCasC:
-    enabled: true
-    defaultConfig: false
     configScripts:
-      cluster-credentials: |
+      credentials: |
         credentials:
           system:
             domainCredentials:
