--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -89,12 +89,12 @@ controller:
                     password: "${ARTIFACT_CACHING_PROXY_PASSWORD}"
                     scope: GLOBAL
                     username: "MY-USERNAME"
-                # - file:
-                #     fileName: "kubeconfig"
-                #     id: "kubeconfig-controller-temp-privatek8s"
-                #     description: "Kubeconfig file for temp-privatek8s"
-                #     scope: SYSTEM
-                #     secretBytes: "${base64:${KUBECONFIG_TEMP_PRIVATEK8S}}"
+                - file:
+                    fileName: "kubeconfig"
+                    id: "kubeconfig-controller-temp-privatek8s"
+                    description: "Kubeconfig file for temp-privatek8s"
+                    scope: SYSTEM
+                    secretBytes: "${base64:${KUBECONFIG_TEMP_PRIVATEK8S}}"
                 - basicSSHUserPrivateKey:
                     scope: SYSTEM
                     id: "ec2-agents-privkey"
@@ -123,7 +123,7 @@ controller:
                 namespace: "jenkins-agents"
                 podRetention: "Never"
                 serverUrl: ${AGENTS_KUBERNETES_CLUSTER_URL}
-                # credentialsId: "kubeconfig-controller-temp-privatek8s"
+                credentialsId: "kubeconfig-controller-temp-privatek8s"
                 serverCertificate: |
                   ${AGENTS_KUBERNETES_CLUSTER_CERT}
                 podLabels:
