--- a/clusters/privatek8s.yaml
+++ b/clusters/privatek8s.yaml
@@ -52,7 +52,7 @@ releases:
       - public-nginx-ingress/public-nginx-ingress # Required to expose the webhooks endpoint (secondary ingress of the jenkins helm chart)
       - private-nginx-ingress/private-nginx-ingress # Required to expose the Web UI to the VPN (primary ingress of the jenkins helm chart)
     values:
-      ## TODO: keep only ext_jenkins-infra.yaml when switching from temp-privatek8s to privatek8s
+      - "../config/ext_jenkins-infra__common.yaml"
       - "../config/ext_jenkins-infra_privatek8s.yaml"
     secrets:
       - "../secrets/config/infra.ci.jenkins.io/jenkins-secrets.yaml"
