split ext_jenkins-infra.yaml values in __common & _<cluster-name>

--- a/config/ext_jenkins-infra_privatek8s.yaml
+++ b/config/ext_jenkins-infra_privatek8s.yaml
@@ -1,7 +1,7 @@
 controller:
   JCasC:
     configScripts:
-      credentials: |
+      cluster-credentials: |
         credentials:
           system:
             domainCredentials:
