--- a/config/ext_jenkins-infra_temp-privatek8s.yaml
+++ b/config/ext_jenkins-infra_temp-privatek8s.yaml
@@ -11,7 +11,7 @@ controller:
                 - file:
                     fileName: "kubeconfig"
                     id: "kubeconfig-controller-temp-privatek8s"
-                    description: "Kubeconfig file for privatek8s"
+                    description: "Kubeconfig file for temp-privatek8s"
                     scope: SYSTEM
                     secretBytes: "${base64:${KUBECONFIG_TEMP_PRIVATEK8S}}"
         jenkins:
