--- a/clusters/prodpublick8s.yaml
+++ b/clusters/prodpublick8s.yaml
@@ -46,6 +46,7 @@ releases:
     chart: ingress-nginx/ingress-nginx
     version: 4.4.0
     values:
+      - "../config/ext_private-nginx-ingress__common.yaml"
       - "../config/ext_private-nginx-ingress_prodpublick8s.yaml"
   - name: prometheus
     namespace: prometheus
