--- a/clusters/temp-privatek8s.yaml
+++ b/clusters/temp-privatek8s.yaml
@@ -78,4 +78,5 @@ releases:
     chart: ingress-nginx/ingress-nginx
     version: 4.4.0
     values:
+      - "../config/ext_private-nginx-ingress__common.yaml"
       - "../config/ext_private-nginx-ingress_temp-privatek8s.yaml"
