--- a/clusters/privatek8s.yaml
+++ b/clusters/privatek8s.yaml
@@ -81,4 +81,5 @@ releases:
     chart: ingress-nginx/ingress-nginx
     version: 4.4.0
     values:
+      - "../config/ext_private-nginx-ingress__common.yaml"
       - "../config/ext_private-nginx-ingress_privatek8s.yaml"
