--- a/config/ext_jenkins-infra_privatek8s.yaml
+++ b/config/ext_jenkins-infra_privatek8s.yaml
@@ -10,11 +10,7 @@ controller:
               - credentials:
                 - file:
                     fileName: "kubeconfig"
-                    id: "kubeconfig-controller-privatek8s"
+                    id: "kubeconfig-controller"
                     description: "Kubeconfig file for privatek8s"
                     scope: SYSTEM
                     secretBytes: "${base64:${KUBECONFIG_PRIVATEK8S}}"
-        jenkins:
-          clouds:
-            - kubernetes:
-                credentialsId: "kubeconfig-controller-privatek8s"
