fix diff changes

--- a/config/ext_private-nginx-ingress_prodpublick8s.yaml
+++ b/config/ext_private-nginx-ingress_prodpublick8s.yaml
@@ -1,5 +1,6 @@
 controller:
   replicaCount: 2
+  ingressClass: private-ingress
   service:
     annotations:
       service.beta.kubernetes.io/azure-load-balancer-internal-subnet: data-tier
