--- a/clusters/cik8s.yaml
+++ b/clusters/cik8s.yaml
@@ -4,18 +4,22 @@ helmDefaults:
   timeout: 300
   wait: true
 repositories:
+  # https://github.com/kubernetes/autoscaler/
   - name: autoscaler
     url: https://kubernetes.github.io/autoscaler
+  # https://github.com/DataDog/helm-charts/
   - name: datadog
     url: https://helm.datadoghq.com
+  # https://github.com/aws/eks-charts/
   - name: eks
     url: https://aws.github.io/eks-charts
+  # https://github.com/jenkins-infra/helm-charts/
   - name: jenkins-infra
     url: https://jenkins-infra.github.io/helm-charts
 releases:
   - name: docker-registry-secrets
-    #this helmchart doesn't create any resources within the namespace specified below.
-    #specifying a namespace is required by the "needs" feature of helmfile (to allow referencing to this release from others)
+    # This helm chart doesn't create any resources within the namespace specified below.
+    # Specifying a namespace is required by the "needs" feature of helmfile (to allow referencing to this release from others)
     namespace: default
     chart: jenkins-infra/docker-registry-secrets
     version: 0.1.0
