feat(infra.ci): exclude pr from libraries caching

--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -430,7 +430,10 @@ controller:
             url: "https://infra.ci.jenkins.io"
           globalLibraries:
             libraries:
-            - defaultVersion: "master"
+            - cachingConfiguration:
+                excludedVersionsStr: "pull/"
+                refreshTimeMinutes: 180
+              defaultVersion: "master"
               implicit: true
               name: "pipeline-library"
               includeInChangesets: false
