--- a/clusters/privatek8s.yaml
+++ b/clusters/privatek8s.yaml
@@ -10,6 +10,9 @@ repositories:
   # https://github.com/kubernetes/ingress-nginx/
   - name: ingress-nginx
     url: https://kubernetes.github.io/ingress-nginx
+  # https://github.com/jenkins-infra/helm-charts/
+  - name: jenkins-infra
+    url: https://jenkins-infra.github.io/helm-charts
   # https://github.com/cert-manager/cert-manager/
   - name: jetstack
     url: https://charts.jetstack.io
