fix(weekly.jenkins.io): `anonymous` is a user not a group

--- a/config/ext_jenkins-weekly.yaml
+++ b/config/ext_jenkins-weekly.yaml
@@ -108,7 +108,7 @@ controller:
               permissions:
                 - "USER:Job/Read:anonymous"
                 - "GROUP:Job/Read:authenticated"
-                - "GROUP:Overall/Read:anonymous"
+                - "USER:Overall/Read:anonymous"
                 - "GROUP:Overall/Read:authenticated"
                 - "GROUP:Overall/Administer:admins"
                 - "GROUP:Overall/Administer:jenkins-admins"
