--- a/clusters/privatek8s.yaml
+++ b/clusters/privatek8s.yaml
@@ -43,6 +43,34 @@ releases:
       - "../config/ext_datadog_privatek8s.yaml"
     secrets:
       - "../secrets/config/datadog/privatek8s-secrets.yaml"
+  - name: jenkins-infra
+    namespace: jenkins-infra
+    chart: jenkins/jenkins
+    version: 4.2.17
+    needs:
+      - jenkins-infra-additional # Required to allow the Jenkins controller to spawn kubernetes pods in the current cluster
+      ## TODO: uncomment the following line when switching from temp-privatek8s to privatek8s
+      # - jenkins-jobs # Required to generate the job definition in a configmap
+      - public-nginx-ingress/public-nginx-ingress # Required to expose the webhooks endpoint (secondary ingress of the jenkins helm chart)
+      - private-nginx-ingress/private-nginx-ingress # Required to expose the Web UI to the VPN (primary ingress of the jenkins helm chart)
+    values:
+      - "../config/ext_jenkins-infra__common.yaml"
+      - "../config/ext_jenkins-infra_privatek8s.yaml"
+    secrets:
+      - "../secrets/config/infra.ci.jenkins.io/jenkins-secrets.yaml"
+  - name: jenkins-infra-additional
+    namespace: jenkins-infra
+    chart: jenkins-infra/jenkins-additional
+    version: 0.0.3
+    values:
+      - ../config/jenkins-infra-additional.yaml
+  ## TODO: uncomment the following line when switching from temp-privatek8s to privatek8s
+  # - name: jenkins-jobs
+  #   namespace: jenkins-infra
+  #   chart: jenkins-infra/jenkins-jobs
+  #   version: 0.4.0
+  #   values:
+  #     - "../config/ext_jenkins-infra-jobs.yaml"
   - name: public-nginx-ingress
     namespace: public-nginx-ingress
     chart: ingress-nginx/ingress-nginx
