--- a/updatecli/updatecli.d/charts/jenkins-additional.yaml
+++ b/updatecli/updatecli.d/charts/jenkins-additional.yaml
@@ -25,7 +25,9 @@ targets:
     name: "Update the chart version for jenkins-additional"
     kind: file
     spec:
-      file: clusters/temp-privatek8s.yaml
+      files:
+        - clusters/privatek8s.yaml
+        - clusters/temp-privatek8s.yaml
       matchpattern: 'chart: jenkins-infra\/jenkins-additional((\r\n|\r|\n)(\s+))version: .*'
       replacepattern: 'chart: jenkins-infra/jenkins-additional${1}version: {{ source "lastChartVersion" }}'
     scmid: default
